got nav dropdown state working for mobile screens

--- a/sdf-portfolio/src/index.css
+++ b/sdf-portfolio/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Roboto:wght@100&display=swap');
+
+@layer base {
+  body {
+    @apply font-[Roboto];
+  }
+  li {
+    @apply px-4;
+    @apply cursor-pointer;
+  }
+}
