--- a/sdf-portfolio/src/index.css
+++ b/sdf-portfolio/src/index.css
@@ -13,3 +13,18 @@
     @apply cursor-pointer;
   }
 }
+
+.content-div {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 250px;
+}
+
+.content-div:hover {
+  background-image: linear-gradient(
+    to right,
+    rgba(112, 157, 255, 0.8),
+    hsla(242, 74%, 61%, 0.8)
+  )!important;
+}
