--- a/sdf-portfolio/src/index.css
+++ b/sdf-portfolio/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Roboto:wght@100&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Roboto:wght@100&display=swap");
 
 @layer base {
   body {
@@ -26,5 +26,5 @@
     to right,
     rgba(112, 157, 255, 0.8),
     hsla(242, 74%, 61%, 0.8)
-  )!important;
+  ) !important;
 }
